<resources>
	<string name="string_global_poi">POI</string>
	<string name="string_global_way">Way</string>
	<string name="string_global_area">Area</string>
	<string name="string_global_categoryTitle">Category: </string>
	<string name="string_global_valueTitle">Value: </string>
	<string name="string_global_descriptionTitle">Description: </string>
	<string name="string_loadtrackactivity_comment"></string>
	<string name="string_loadtrackactivity_nocomment">No comment.</string>
	<string name="string_trackInfoDialog_title">Track details</string>
	<string name="string_licenseDialog_title">GPL3 License</string>
	<string name="string_aboutActivity_title">About</string>
	<string name="string_addmemoActivity_title">Record voice</string>
	<string name="string_addpointActivity_title">Add POI</string>
	<string name="string_addpointmetaActivity_title">Add meta data</string>
	<string name="string_fulltextsearchActivity_title">Search</string>
	<string name="string_loadtrackActivity_title">Load track</string>
	<string name="string_newtrackActivity_title">New track</string>
	<string name="string_newtrackactivity_list_lat">Lat: </string>
	<string name="string_newtrackactivity_list_lon">Lon:</string>
	<string name="string_newtrackactivity_list_media">Media files: </string>
	<string name="string_newtrackactivity_list_pointcount">Number of nodes:</string>
	<string name="string_newtrackactivity_list_start">Start</string>
	<string name="string_newtrackactivity_list_end">End</string>
	<string name="string_preferencesActivity_title">Preferences</string>
	<string name="string_startActivity_title">TraceBook</string>
	<string name="string_recordvideoActivity_title">Record video</string>
	<string name="string_searchInfoDialog_title">Meta data information</string>
	<string name="string_statusDialog_here">You are here</string>
	<string name="string_preferences_catGPS">GPS</string>
	<string name="string_preferences_catMapView">Map</string>
	<string name="string_preferences_catOSM">OSM</string>
	<string name="string_preferences_catGUI">Display</string>
	<string name="string_preferences_catMedia">Media files</string>
	<string name="string_preferences_catExport">Export</string>
	<string name="string_preferences_catMetaTag">Meta tags</string>
	<string name="string_preferences_catTrackTag">Track</string>
	<string name="string_preferences_checkGPS">Check GPS status</string>
	<string name="string_preferences_descGPS">Check whether GPS is enabled</string>
	<string name="string_preferences_descStopGPS">When to turn off GPS if inactive?</string>
	<string name="string_preferences_stopGPS">GPS timeout</string>
	<string name="string_preferences_descShowStatusbar">Show status bar (description, button to preferences
		and details).</string>
	<string name="string_preferences_showStatusbar">Show status bar</string>
	<string name="string_preferences_displayOn">Never turn off display</string>
	<string name="string_preferences_descDisplayOn">When enabled, display never is turned off.</string>
	<string name="string_preferences_showGPSsiginalQuality">Show GPS reception</string>
	<string name="string_preferences_descShowGPSsiginalQuality">Show GPS signal strength in status bar.</string>
	<string name="string_preferences_switchTheme">Appearance</string>
	<string name="string_preferences_descSwitchTheme">Pick a theme for TraceBook.</string>
	<string name="string_preferences_localTitleMapCache">Local tile cache</string>
	<string name="string_preferences_descLocalTitleMapCache">Use local rendering instead of OSM.</string>
	<string name="string_preferences_onlineTitleStyle">Rendering engine</string>
	<string name="string_preferences_descOnlineTitleStyle">Choose your OSM rendering engine.</string>
	<string name="string_preferences_maxHistorySize">History size</string>
	<string name="string_preferences_descMaxHistorySize">Number of tags to be remembered in tag search.
	</string>
	<string name="string_preferences_exportMail">Recipient for sending tracks to</string>
	<string name="string_preferences_osmPassword">OSM password</string>
	<string name="string_preferences_osmNickname">OSM user name</string>
	<string name="string_preferences_setMaxVideoRecordingTime">Maximum video length</string>
	<string name="string_preferences_descSetMaxVideoRecordingTime"></string>
	<string name="string_preferences_setMaxAudioRecordingTime">Maximum audio length</string>
	<string name="string_preferences_descSetMaxAudioRecordingTime"></string>
	<string name="string_preferences_showMostRecentTagsInHistory">Show recently used tags</string>
	<string name="string_preferences_descShowMostRecentTagsInHistory">Show your most recently used tags when adding a
		tag.</string>
	<string name="string_preferences_chooseMap">Choose your map file</string>
	<string name="string_filepicker_error_invalid_path">Invalid path</string>
	<string name="string_preferences_setMapFilter">Activate map filter</string>
	<string name="string_preferences_descMapFilter">When activating, you tracked way get smoother.</string>
	<string name="app_name">TraceBook</string>
	<string name="not_startActivity_tickerTextActive">Tracking active</string>
	<string name="not_startActivity_contentTitleActive">TraceBook</string>
	<string name="not_startActivity_contentTextActive">Currently tracking...</string>
	<string name="not_startActivity_tickerTextPause">Tracking pause</string>
	<string name="not_startActivity_contentTitlePause">TraceBook</string>
	<string name="not_startActivity_contentTextPause">Currently pause the tracking...</string>
	<string name="tv_startActivity_welcome">Welcome to TraceBook</string>
	<string name="tv_addpointActivity_nodeId">Node id:</string>
	<string name="tv_addpointmetaActivity_insertTag">Add tag</string>
	<string name="tv_addpointmetaActivity_insertValue">Add value</string>
	<string name="tv_addpointActivity_editMeta">Edit meta data</string>
	<string name="tv_addpointActivity_noMetaData">No meta data available</string>
	<string name="tv_addpointActivity_MetaData">Meta data available for this node</string>
	<string name="tv_newtrackActivity_setButtonList1">Add media data to current way</string>
	<string name="tv_newtrackActivity_setButtonList2">Add media data to current area</string>
	<string name="tv_addpointActivity_titleListViewCat">Key</string>
	<string name="tv_addpointActivity_titleListViewVal">Value</string>
	<string name="tv_trackInfoDialog_name">Name:</string>
	<string name="tv_trackInfoDialog_comment">Note:</string>
	<string name="tv_trackInfoDialog_timestamp">Timestamp:</string>
	<string name="tv_trackInfoDialog_pois">Number of POIs:</string>
	<string name="tv_trackInfoDialog_ways">Number of ways:</string>
	<string name="tv_trackInfoDialog_media">Number of media files:</string>
	<string name="tv_trackInfoDialog_noInformation">No information available</string>
	<string name="tv_trackInfoDialog_trackName">Track name:</string>
	<string name="tv_trackInfoDialog_timestampText">Timestamp:</string>
	<string name="tv_trackInfoDialog_poisText">Number of saved POIs:</string>
	<string name="tv_trackInfoDialog_waysText">Number of saved ways:</string>
	<string name="tv_trackInfoDialog_commentText">Notes:</string>
	<string name="tv_trackInfoDialog_nameText">Name:</string>
	<string name="tv_trackInfoDialog_mediaText">Media files:</string>
	<string name="tv_addmemoActivity_stopRecord">Stop voice recording</string>
	<string name="tv_addmemoActivity_startRecord">Start voice recording</string>
	<string name="tv_addmemoActivity_record">Recording...</string>
	<string name="tv_listviewedit_idTitle">Id: </string>
	<string name="tv_loadtrackActivity_filter">Filter:</string>
	<string name="tv_newtrackactivity_signalstrength_strength">GPS reception: </string>
	<string name="tv_newtrackactivity_signalstrength_count">Number of satellites: </string>
	<string name="tv_searchInfoDialog_noInformation">No information available.</string>
	<string name="tv_searchInfoDialog_urlTitle">URI to wiki:</string>
	<string name="tv_statusbar_addpointTitle">Add point of interest</string>
	<string name="tv_statusbar_addpointDesc">Add tags and media files here.</string>
	<string name="tv_statusbar_addpointmetaTitle">Add meta information</string>
	<string name="tv_statusbar_addpointmetaDesc">Add tags and media files here.</string>
	<string name="tv_statusbar_fulltextsearchTitle">Search tags</string>
	<string name="tv_statusbar_fulltextsearchDesc">Search for existing tags in OSM.</string>
	<string name="tv_statusbar_aboutTitle">About TraceBook</string>
	<string name="tv_statusbar_aboutDesc"></string>
	<string name="tv_statusbar_loadtrackTitle">Load track</string>
	<string name="tv_statusbar_loadtrackDesc">Resume your saved tracks here.</string>
	<string name="tv_newtrackactivity_allElements">All saved track elements of this session.</string>
	<string name="tv_filepicker_currdir">Current directory:</string>
	<string name="et_fulltextsearchActivity_search">Search tags</string>
	<string name="toast_noTrackFound">Track could not be found.</string>
	<string name="toast_loadingOnlineMap">Unable to open map file, fetching tiles from the
		internet.</string>
	<string name="toast_noInternetAccess">You are currently not connected to the internet.
		The online map cannot be displayed.</string>
	<string name="toast_applicationError">An error occurred. Please restart the application
		and try again.</string>
	<string name="toast_recordingFinished">Recording finished.</string>
	<string name="toast_noneExistentNode">Node does not exist!</string>
	<string name="alert_addmemoactivity_progressdialog">Please wait.\nRecording is starting soon...
	</string>
	<string name="alert_global_cancel">Cancel</string>
	<string name="alert_global_ok">Ok</string>
	<string name="alert_global_yes">Yes</string>
	<string name="alert_global_no">No</string>
	<string name="alert_global_addNotice">Add note</string>
	<string name="alert_global_addedNotice">Added note:</string>
	<string name="alert_global_exit">Do you want to save your track?</string>
	<string name="alert_global_trackName">Saved track:</string>
	<string name="alert_mapsforgeActivity_pause">Do you want to pause the current session?</string>
	<string name="alert_newtrackActivity_rename">Rename node</string>
	<string name="alert_newtrackActivity_addTrackNotice">Add note to track</string>
	<string name="alert_newtrackActivity_saveSetTrack">Closing track</string>
	<string name="alert_loadtrackActivity_rename">Rename track</string>
	<string name="alert_loadtrackActivity_deleteTrack">Delete track?</string>
	<string name="alert_loadtrackActivity_pleaseWait">Please wait...</string>
	<string name="alert_loadtrackActivity_loadingTracks">Tracks are being loaded...</string>
	<string name="alert_global_notSaveAndClose">Cancel</string>
	<string name="alert_loadtrackActivity_stopCurrentTrack">Close recent track and load new track?</string>
	<string name="alert_NewTrackActivity_NoGpsMessage">Currently GPS is disabled. To be able to track
		points, you have to enable it. Do you want to enable it?</string>
	<string name="alert_NewTrackActivity_NoGpsTitle">GPS disabled</string>
	<string name="opt_mapsforgeActivity_resume">Resume</string>
	<string name="tbtn_newtrackActivity_streetOn">Start way</string>
	<string name="tbtn_newtrackActivity_streetOff">End way</string>
	<string name="tbtn_newtrackActivity_areaOn">Start area</string>
	<string name="tbtn_newtrackActivity_areaOff">End area</string>
	<string name="btn_newtrackActivity_addPoint">Add point of interest</string>
	<string name="btn_newtrackActivity_stopTrack">Close</string>
	<string name="btn_newtrackActivity_editComment">Edit track notes</string>
	<string name="btn_addpointmetaActivity_save">Save</string>
	<string name="btn_addpointmetaActivity_cancel">Cancel</string>
	<string name="btn_addpointActivity_addMeta">Add</string>
	<string name="btn_addpointActivity_back">Close</string>
	<string name="btn_addpointmetaActivity_search">Search</string>
	<string name="btn_searchInfoDialog_save">Apply</string>
</resources>