<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<PreferenceCategory android:title="@string/string_preferences_catGPS">
		<CheckBoxPreference android:title="@string/string_preferences_checkGPS"
			android:defaultValue="true" android:summary="@string/string_preferences_descGPS"
			android:key="check_GPSbyStartTracking" />

		<ListPreference android:title="@string/string_preferences_stopGPS"
			android:key="lst_stopGPSafterSeconds" android:defaultValue="10"
			android:entries="@array/stopTrackingAfter" android:entryValues="@array/stopTrackingAfter_values"
			android:summary="@string/string_preferences_descStopGPS" />
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/string_preferences_catMapView">
		<CheckBoxPreference android:title="@string/string_preferences_localTitleMapCache"
			android:defaultValue="false"
			android:summary="@string/string_preferences_descLocalTitleMapCache"
			android:key="check_activateLocalTitleMapCache" />

		<CheckBoxPreference android:title="@string/string_preferences_setMapFilter"
			android:defaultValue="true" android:summary="@string/string_preferences_descMapFilter"
			android:key="check_setMapFilter" />

		<ListPreference android:title="@string/string_preferences_onlineTitleStyle"
			android:key="lst_setOnlineTitleStyle" android:defaultValue="OSMA"
			android:entries="@array/onlineTitleStyle" android:entryValues="@array/onlineTitleStyle_values"
			android:summary="@string/string_preferences_descOnlineTitleStyle" />

		<Preference android:title="@string/string_preferences_chooseMap"
			android:key="mapsforgeMapFilePath" android:defaultValue="" />


	</PreferenceCategory>

	<PreferenceCategory android:title="@string/string_preferences_catMetaTag">
		<CheckBoxPreference
			android:title="@string/string_preferences_showMostRecentTagsInHistory"
			android:defaultValue="true"
			android:summary="@string/string_preferences_descShowMostRecentTagsInHistory"
			android:key="check_showMostRecentTagsInHistory" />

		<ListPreference android:title="@string/string_preferences_maxHistorySize"
			android:key="lst_setHistorySize" android:defaultValue="30"
			android:entries="@array/maxHistorySize" android:entryValues="@array/maxHistorySize_values"
			android:summary="@string/string_preferences_descMaxHistorySize" />
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/string_preferences_catGUI">
		<CheckBoxPreference android:title="@string/string_preferences_showStatusbar"
			android:defaultValue="false" android:summary="@string/string_preferences_descShowStatusbar"
			android:key="check_visbilityStatusbar" />

		<CheckBoxPreference android:title="@string/string_preferences_showGPSsiginalQuality"
			android:defaultValue="true"
			android:summary="@string/string_preferences_descShowGPSsiginalQuality"
			android:key="check_showGPSsignalQuality" />

		<ListPreference android:title="@string/string_preferences_switchTheme"
			android:key="lst_switchTheme" android:defaultValue="1"
			android:entries="@array/switchTheme" android:entryValues="@array/switchTheme_values"
			android:summary="@string/string_preferences_descSwitchTheme" />

		<CheckBoxPreference android:title="@string/string_preferences_displayOn"
			android:defaultValue="false" android:summary="@string/string_preferences_descDisplayOn"
			android:key="check_displayAlwaysOn" />
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/string_preferences_catMedia">
		<ListPreference android:title="@string/string_preferences_setMaxVideoRecordingTime"
			android:key="lst_maxVideoRecording" android:defaultValue="0"
			android:entries="@array/setMaxVideoRecordingTime"
			android:entryValues="@array/setMaxVideoRecordingTime_values"
			android:summary="@string/string_preferences_descSetMaxVideoRecordingTime" />

		<ListPreference android:title="@string/string_preferences_setMaxAudioRecordingTime"
			android:key="lst_maxAudioRecording" android:defaultValue="0"
			android:entries="@array/setMaxAudioRecordingTime"
			android:entryValues="@array/setMaxAudioRecordingTime_values"
			android:summary="@string/string_preferences_descSetMaxAudioRecordingTime" />
	</PreferenceCategory>
</PreferenceScreen>