<?xml version="1.0" encoding="utf-8"?>
<!-- @author greenTraxas -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="wrap_content"
	android:orientation="vertical">

	<LinearLayout android:id="@+id/ly_addpointActivity_statusbar"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:orientation="horizontal" android:gravity="center_horizontal">
	</LinearLayout>

	<TextView android:id="@+id/tv_addpointActivity_nodeId"
		android:layout_width="fill_parent" android:layout_height="fill_parent"
		android:textSize="15sp" android:textStyle="bold" android:textColor="#fff" />

	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:orientation="horizontal">

		<Button android:id="@+id/btn_addpointActivity_addMeta"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:minWidth="100dp" android:text="@string/btn_addpointActivity_addMeta"
			android:onClick="addPointMetaBtn" />

		<Button android:id="@+id/btn_addpointActivity_cancel2"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:minWidth="100dp" android:text="@string/btn_addpointActivity_back"
			android:onClick="cancelBtn" />

	</LinearLayout>

	<LinearLayout android:id="@+id/ly_addpointaAtivity_metaMediaBtnPoint"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:orientation="horizontal" android:gravity="center_horizontal">

	</LinearLayout>

	<TextView android:id="@+id/tv_addpointActivity_allocateMeta"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:textSize="15sp" android:textStyle="bold" android:paddingLeft="7dp"
		android:paddingBottom="10dp" />

	<LinearLayout android:id="@+id/ly_addpointActivity_titleListeView"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:orientation="horizontal" android:background="#8ac705">

		<TextView android:id="@+id/tv_addpointActivity_titleListViewCat"
			android:text="@string/tv_addpointActivity_titleListViewCat"
			android:layout_width="150dp" android:layout_height="wrap_content"
			android:textSize="18sp" android:textColor="#fff" android:paddingLeft="7dp" />

		<TextView android:id="@+id/tv_addpointActivity_titleListViewVal"
			android:text="@string/tv_addpointActivity_titleListViewVal"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:textSize="18sp" android:textColor="#fff" android:paddingLeft="7dp" />

	</LinearLayout>
	<ListView android:id="@+id/android:list" android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:layout_weight="1"
		android:scrollingCache="true" android:divider="#8ac705"
		android:dividerHeight="1sp" android:drawSelectorOnTop="false" />

</LinearLayout>
